# Fater

./: LICENSE  README.md  faterrun.py  faterrun.py.bak  uires_rc.py
FATERUI/: __init__.py  editwidget.py  editwidget.py.bak  editwidget.ui  fatermainwin.ui  faterwin.py  faterwin.py.bak  graphicview.py  imageview.py  imageview.py.bak  imageview.ui  paramwidget.py  paramwidget.py.bak  paramwidget.ui  settingdlg.py  settingdlg.py.bak  settingdlg.ui  statisticswidget.py  statisticswidget.py.bak  statisticswidget.ui  typewidget.py  typewidget.py.bak  typewidget.ui  ui_editwidget.py  ui_fatermainwin.py  ui_imageview.py  ui_paramwidget.py  ui_settingdlg.py  ui_statisticswidget.py  ui_typewidget.py
FATERUI/algorithm/: __init__.py  __init__.py.bak  cameraUi.py  cameraUi.py.bak  featurelocation.py  featurelocation.py.bak  grayscale.py  grayscale.py.bak  infraredout.py  infraredout.py.bak  model.json  ocrUi.py  ocrUi.py.bak  thresholdUi.py  waitingUi.py
FATERUI/common/: __init__.py  __init__.py.bak  devicemanage.py  devicemanage.py.bak
FATERUI/common/camera/: README.md  __init__.py  __init__.py.bak  camera.py  camera.py.bak  cameramanage.py  cameramanage.py.bak  common_fun.py  common_fun.py.bak  common_tools.py  common_tools.py.bak  singleton.py  virtualcamera.py  virtualcamera.py.bak
FATERUI/common/camera/bobcat/: CameraBobcat.cpp  CameraBobcat.h  CameraBobcat.i  __init__.py  __main__.py  __main__.py.bak  camera_bobcat.py  camera_bobcat.py.bak  make.sh
FATERUI/common/camera/bobcat/bobcat_gev/include/: EbVersion.h  IPvDeviceAdapter.h  IpxBaseDef.h  IpxDemosaicingDef.h  IpxImage.h  IpxPixelType.h  IpxTrueSense.h  IpxUserData.h  PvDisplayThread.h  PvDisplayWnd.h  PvMp4Writer.h  PvVersion.h
FATERUI/common/camera/bobcat/bobcat_gev/lib/: libEbTransportLayerLib.so.5.1.4  libEbTransportLayerLib.so.5.1.4.3606  libEbUtilsLib.so.5  libEbUtilsLib.so.5.1.4.3606  libPtConvertersLib.so.5  libPtConvertersLib.so.5.1.4.3606  libPtUtilsLib.so.5.1  libPtUtilsLib.so.5.1.4.3606  libPvAppUtils.so.4  libPvAppUtils.so.4.1.4.3606  libPvBase.so.4.1  libPvBase.so.4.1.4.3606  libPvBuffer.so.4  libPvBuffer.so.4.1.4.3606  libPvDevice.so.4.1.4.3606  libPvGUI.so.4.1.4  (+13 more)
FATERUI/common/camera/bobcat/bobcat_gev/share/samples/eBUSPlayer/: .ebusplayer.cpp.swp  CMakeLists.txt  Device.cpp  DisplayThread.cpp  IMp4Writer.h  ImageFiltering.cpp  ImageFiltering.h  ImageSaving.cpp  ImageSaving.h  Makefile  Mp4WriterLinux.cpp  Mp4WriterLinux.h  Mp4WriterMac.h  Mp4WriterWin32.h  Player.cpp  Player.h  aboutbox.cpp  aboutbox.h  actioncommanddlg.cpp  actioncommanddlg.h  bufferoptionsdlg.cpp  bufferoptionsdlg.h  displayoptionsdlg.cpp  displayoptionsdlg.h  ebusplayer.cpp  ebusplayer.h  ebusplayer.qrc  ebusplayerhandlers.cpp  ebusplayerlayout.cpp  ebusplayermenufile.cpp  ebusplayermenuhelp.cpp  ebusplayermenutools.cpp  errorsdlg.cpp  eventmonitordlg.cpp  eventmonitordlg.h  filetransferdlg.cpp  filetransferdlg.h  filteringdlg.cpp  filteringdlg.h  histogramwidget.cpp  (+14 more)
FATERUI/common/camera/mindvision/: CameraMindVision.cpp  CameraMindVision.h  CameraMindVision.i  CameraMindVision.py  CameraMindVision.py.bak  CameraMindVision_wrap.cxx  MV-GE500C-IT-Group0.config  MVG056032310120.mvdat  __init__.py  camera_mindvision.py  camera_mindvision.py.bak  make.sh  test.cpp  test.py  test.py.bak
FATERUI/common/camera/pointgrey/: CameraPointgrey.cpp  CameraPointgrey.h  CameraPointgrey.i  Makefile  __init__.py  __main__.py  __main__.py.bak  camera_pointgrey.py  camera_pointgrey.py.bak  make.sh
FATERUI/common/camera/svs/: CameraSVS.cpp  CameraSVS.h  CameraSVS.i  camera_svs.py  camera_svs.py.bak  make.sh  svgige.h  test.cpp  test.py  test.py.bak
FATERUI/common/infrared/: __init__.py  __init__.py.bak  infrared.py  infrared.py.bak
FATERUI/tools/: __init__.py  imagecover.py
RES/: uires.qrc
(+587 files in other folders)
